exports[`test should render a default time input 1`] = `
<div
  className="terra-TimeInput">
  <MaskedInput
    className="terra-TimeInput-input"
    keepCharPositions={true}
    mask={
      Array [
        /[0-2]/,
        /[0-9]/,
        ":",
        /[0-5]/,
        /[0-9]/,
      ]
    }
    onChange={[Function]}
    onKeyDown={[Function]}
    pipe={[Function]}
    placeholder="HH:mm"
    placeholderChar=" "
    type="text" />
</div>
`;

exports[`test should render a time input with a default time 1`] = `
<div
  className="terra-TimeInput">
  <MaskedInput
    className="terra-TimeInput-input"
    keepCharPositions={true}
    mask={
      Array [
        /[0-2]/,
        /[0-9]/,
        ":",
        /[0-5]/,
        /[0-9]/,
      ]
    }
    onChange={[Function]}
    onKeyDown={[Function]}
    pipe={[Function]}
    placeholder="HH:mm"
    placeholderChar=" "
    type="text"
    value="10:45" />
</div>
`;

exports[`test should render a time input with custom attributes 1`] = `
<div
  className="terra-TimeInput">
  <MaskedInput
    className="terra-TimeInput-input"
    id="terra-time-input"
    keepCharPositions={true}
    mask={
      Array [
        /[0-2]/,
        /[0-9]/,
        ":",
        /[0-5]/,
        /[0-9]/,
      ]
    }
    name="time-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    pipe={[Function]}
    placeholder="HH:mm"
    placeholderChar=" "
    type="text" />
</div>
`;
